# ClaudeMonitor

./: .gitignore  AGENTS.md  README.md  _scripts.py  main.py  pyproject.toml  run.py
claudemonitor/: config.py  fetcher.py  main.py  models.py  notifications.py  processor.py  taskbar_companion.py  tray.py
docs/agentNotes/: 2026-07-04-threshold-notifications.md
tests/: test_config.py  test_fetcher.py  test_main.py  test_notifications.py  test_processor.py  test_taskbar_companion.py  test_tray.py
