[project]
name = "claudemonitor"
version = "0.1.0"
description = "Windows system tray app to track Claude usage"
requires-python = ">=3.14"
dependencies = [
    "pystray>=0.19.5",
    "pillow>=10.4.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",
]

[project.scripts]
dev = "claudemonitor.main:main"
poll = "claudemonitor.main:poll"
build = "_scripts:build"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["main", "_scripts"]

[tool.setuptools.packages.find]
where = ["."]
include = ["claudemonitor*"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pyinstaller>=6.15.0",
]
